tests/errors/construction/literal-with-initializer.fn
---
Description: Initializer applied to a literal
Expected: FN3601
---

type Program
{
    static fn Main -> i32
    {
        var k = true { x: 1.0 }
        return 0
    }
}
